--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,13 @@ import Header from '../components/ui/Header.astro';
 import HeroSection from '../components/sections/HeroSection.astro';
 import ProblemSection from '../components/sections/ProblemSection.astro';
 import FeaturesSection from '../components/sections/FeaturesSection.astro';
+import TestimonialsSection from '../components/sections/TestimonialsSection.astro';
+import StatsSection from '../components/sections/StatsSection.astro';
+import TeamSection from '../components/sections/TeamSection.astro';
+import IntegrationsSection from '../components/sections/IntegrationsSection.astro';
+import SecuritySection from '../components/sections/SecuritySection.astro';
+import PricingSection from '../components/sections/PricingSection.astro';
+import FAQSection from '../components/sections/FAQSection.astro';
 import FinalSections from '../components/sections/FinalSections.astro';
 ---
 
@@ -15,5 +22,12 @@ import FinalSections from '../components/sections/FinalSections.astro';
 	<HeroSection />
 	<ProblemSection />
 	<FeaturesSection />
+	<TestimonialsSection />
+	<StatsSection />
+	<TeamSection />
+	<IntegrationsSection />
+	<SecuritySection />
+	<PricingSection />
+	<FAQSection />
 	<FinalSections />
 </Layout>
